Added settings page and added a recycler view to the homepage

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -28,6 +29,7 @@
                     android:textColor="@color/white"
                     android:fontFamily="@font/commissioner"/>
                 <ImageView
+                    android:id="@+id/findpeopleimage"
                     android:layout_marginRight="30dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -36,6 +38,14 @@
 
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/contactlist"
+        android:layout_below="@id/appbar"
+        android:layout_above="@id/nav_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
