--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Settings">
+
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -24,6 +27,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="25sp"
                     android:text="Settings"
+                    android:textStyle="bold"
                     android:textColor="@color/white"
                     android:fontFamily="@font/commissioner"/>
             </LinearLayout>
@@ -31,9 +35,110 @@
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
-    Image
 
 
+   <androidx.cardview.widget.CardView
+       android:layout_marginTop="20dp"
+       app:cardElevation="5dp"
+       app:cardCornerRadius="100dp"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content">
+
+       <ImageView
+           android:id="@+id/profileimage"
+           android:layout_width="220dp"
+           android:src="@drawable/ic_image"
+           android:layout_height="220dp"/>
+
+   </androidx.cardview.widget.CardView>
+
+
+    <androidx.cardview.widget.CardView
+        android:layout_margin="15dp"
+        app:cardElevation="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:gravity="center"
+            android:padding="15dp"
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_profile"/>
+
+
+            <EditText
+                android:layout_marginBottom="1dp"
+                android:id="@+id/name"
+                android:layout_marginLeft="10dp"
+                android:textColor="#030060"
+                android:textSize="20sp"
+                android:hint="Name"
+                android:maxLength="15"
+                android:layout_width="match_parent"
+                android:background="@drawable/edittextbg"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_margin="15dp"
+        app:cardElevation="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:gravity="center"
+            android:padding="15dp"
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_edit"/>
+
+
+            <EditText
+                android:layout_marginBottom="1dp"
+                android:id="@+id/bio"
+                android:layout_marginLeft="10dp"
+                android:textColor="#030060"
+                android:textSize="20sp"
+                android:hint="Bio"
+                android:maxLength="15"
+                android:layout_width="match_parent"
+                android:background="@drawable/edittextbg"
+                android:layout_height="wrap_content"/>
+
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+
+    <Button
+        android:id="@+id/savebutton"
+        android:layout_width="match_parent"
+        android:layout_marginTop="50dp"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:background="@drawable/button"
+        android:text="SAVE"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:fontFamily="@font/commissioner"
+        android:textSize="15sp"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:textColor="@color/white"
+        android:layout_height="wrap_content"/>
 
 
 </LinearLayout>
