--- a/app/src/main/res/layout/activity_find_friends.xml
+++ b/app/src/main/res/layout/activity_find_friends.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".Notifications">
+    tools:context=".FindFriends">
+
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/notificationappbar"
+        android:id="@+id/findpeopleappbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -19,24 +21,35 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/textview"
+
+                <EditText
+                    android:id="@+id/searchbar"
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="25sp"
-                    android:text="Notifications"
+                    android:textSize="20sp"
+                    android:hint="search..."
+                    android:drawableLeft="@android:drawable/ic_menu_search"
+                    android:drawablePadding="10dp"
                     android:textColor="@color/white"
                     android:fontFamily="@font/commissioner"/>
+
+                <ImageView
+                    android:id="@+id/findpeopleimage"
+                    android:layout_marginRight="30dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic___3user"/>
             </LinearLayout>
 
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_below="@id/notificationappbar"
-        android:id="@+id/notificationsview"
+        android:id="@+id/findfriendslist"
+        android:layout_below="@id/findpeopleappbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-</RelativeLayout>
+
+</LinearLayout>
