finished up the settings page... ads and saves user's information

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -45,6 +45,7 @@
        android:layout_height="wrap_content">
 
        <ImageView
+           android:scaleType="fitCenter"
            android:id="@+id/profileimage"
            android:layout_width="220dp"
            android:src="@drawable/ic_image"
