--- a/app/src/main/res/layout/activity_profile_acivity.xml
+++ b/app/src/main/res/layout/activity_profile_acivity.xml
@@ -8,11 +8,12 @@
     tools:context=".ProfileAcivity">
     <ImageView
         android:id="@+id/recieverimage"
+        android:scaleType="centerCrop"
         android:layout_width="match_parent"
         android:src="@drawable/ic_image"
         android:layout_height="match_parent"/>
     <LinearLayout
-        android:layout_margin="15dp"
+        android:layout_marginTop="50dp"
         android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:orientation="vertical"
