--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -146,7 +146,7 @@
         android:layout_marginTop="10dp"
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
-        android:background="#EC0505"
+        android:background="@drawable/button"
         android:text="Logout"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
