--- a/app/src/main/res/layout/notification_item_design.xml
+++ b/app/src/main/res/layout/notification_item_design.xml
@@ -24,6 +24,16 @@
                 android:src="@drawable/ic_image"
                 android:layout_height="150dp"/>
 
+            <TextView
+                android:id="@+id/user_name"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:fontFamily="@font/commissioner"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:text="User Name"/>
+
             <Button
                 android:id="@+id/acceptfriendrequest"
                 android:layout_width="match_parent"
