--- a/app/src/main/res/layout/activity_find_friends.xml
+++ b/app/src/main/res/layout/activity_find_friends.xml
@@ -7,43 +7,50 @@
     android:layout_height="match_parent"
     tools:context=".FindFriends">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/findpeopleappbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/findpeopleappbar"
+            android:background="@color/purple_500"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+              <androidx.cardview.widget.CardView
+                  android:layout_marginTop="20dp"
+                  android:layout_marginBottom="10dp"
+                  android:layout_marginEnd="10dp"
+                  android:background="#200E32"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent">
 
-                <EditText
-                    android:id="@+id/searchbar"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:hint="search..."
-                    android:drawableLeft="@android:drawable/ic_menu_search"
-                    android:drawablePadding="10dp"
-                    android:textColor="@color/white"
-                    android:fontFamily="@font/commissioner"/>
+                 <LinearLayout
+                     android:layout_margin="5dp"
+                     android:layout_width="match_parent"
+                     android:gravity="center"
+                     android:layout_height="match_parent">
 
-                <ImageView
-                    android:id="@+id/findpeopleimage"
-                    android:layout_marginRight="30dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic___3user"/>
-            </LinearLayout>
+                     <ImageView
+                         android:layout_margin="5dp"
+                         android:layout_width="wrap_content"
+                         android:src="@drawable/ic_search"
+                         android:layout_height="wrap_content"/>
 
+                     <EditText
+                         android:layout_marginStart="5dp"
+                         android:id="@+id/searchbar"
+                         android:background="@color/white"
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:textSize="20sp"
+                         android:hint="Search"
+                         android:drawablePadding="10dp"
+                         android:textColor="@color/black"
+                         android:fontFamily="@font/product_sans_regular"/>
+
+                 </LinearLayout>
+
+              </androidx.cardview.widget.CardView>
         </androidx.appcompat.widget.Toolbar>
-    </com.google.android.material.appbar.AppBarLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/findfriendslist"
