--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,154 +8,165 @@
     android:layout_height="match_parent"
     tools:context=".Settings">
 
-    <com.google.android.material.appbar.AppBarLayout
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:gravity="center"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <androidx.appcompat.widget.Toolbar
+            <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/textview"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="25sp"
+                        android:text="Settings"
+                        android:textStyle="bold"
+                        android:textColor="@color/white"
+                        android:fontFamily="@font/commissioner"/>
+                </LinearLayout>
+
+            </androidx.appcompat.widget.Toolbar>
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.cardview.widget.CardView
+            android:layout_marginTop="20dp"
+            app:cardElevation="5dp"
+            app:cardCornerRadius="200dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:scaleType="centerCrop"
+                android:id="@+id/profileimage"
+                android:layout_width="220dp"
+                android:src="@drawable/ic_image"
+                android:layout_height="220dp"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_marginTop="50dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            app:cardElevation="1dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <LinearLayout
                 android:gravity="center"
+                android:padding="15dp"
+                android:layout_width="match_parent"
                 android:orientation="horizontal"
-                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/textview"
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/ic_profile"/>
+
+
+                <EditText
+                    android:layout_marginBottom="1dp"
+                    android:id="@+id/name"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="#030060"
+                    android:textSize="20sp"
+                    android:hint="Name"
+                    android:maxLength="15"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="25sp"
-                    android:text="Settings"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"
-                    android:fontFamily="@font/commissioner"/>
+                    android:background="@drawable/edittextbg"
+                    android:layout_height="wrap_content"/>
+
             </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-        </androidx.appcompat.widget.Toolbar>
-    </com.google.android.material.appbar.AppBarLayout>
-
-
-
-   <androidx.cardview.widget.CardView
-       android:layout_marginTop="20dp"
-       app:cardElevation="5dp"
-       app:cardCornerRadius="100dp"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content">
-
-       <ImageView
-           android:scaleType="centerCrop"
-           android:id="@+id/profileimage"
-           android:layout_width="220dp"
-           android:src="@drawable/ic_image"
-           android:layout_height="220dp"/>
-
-   </androidx.cardview.widget.CardView>
-
-
-    <androidx.cardview.widget.CardView
-        android:layout_margin="15dp"
-        app:cardElevation="2dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:gravity="center"
-            android:padding="15dp"
+        <androidx.cardview.widget.CardView
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            app:cardElevation="2dp"
             android:layout_width="match_parent"
-            android:orientation="horizontal"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_profile"/>
-
-
-            <EditText
-                android:layout_marginBottom="1dp"
-                android:id="@+id/name"
-                android:layout_marginLeft="10dp"
-                android:textColor="#030060"
-                android:textSize="20sp"
-                android:hint="Name"
-                android:maxLength="15"
+            <LinearLayout
+                android:gravity="center"
+                android:padding="15dp"
                 android:layout_width="match_parent"
-                android:background="@drawable/edittextbg"
-                android:layout_height="wrap_content"/>
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
 
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/ic_edit"/>
 
-    <androidx.cardview.widget.CardView
-        android:layout_margin="15dp"
-        app:cardElevation="2dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:gravity="center"
-            android:padding="15dp"
+                <EditText
+                    android:layout_marginBottom="1dp"
+                    android:id="@+id/bio"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="#030060"
+                    android:textSize="20sp"
+                    android:hint="Bio"
+                    android:maxLength="30"
+                    android:layout_width="match_parent"
+                    android:background="@drawable/edittextbg"
+                    android:layout_height="wrap_content"/>
+
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <Button
+            android:id="@+id/savebutton"
             android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_height="wrap_content">
+            android:layout_marginTop="50dp"
+            android:clickable="true"
+            android:foreground="?attr/selectableItemBackground"
+            android:background="@drawable/button"
+            android:text="SAVE"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="@font/commissioner"
+            android:textSize="15sp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:textColor="@color/white"
+            android:layout_height="wrap_content"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_edit"/>
+        <Button
+            android:id="@+id/logoutbtn"
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:clickable="true"
+            android:foreground="?attr/selectableItemBackground"
+            android:background="@drawable/button"
+            android:text="Logout"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="@font/commissioner"
+            android:textSize="15sp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:textColor="@color/white"
+            android:layout_height="wrap_content"/>
 
-
-            <EditText
-                android:layout_marginBottom="1dp"
-                android:id="@+id/bio"
-                android:layout_marginLeft="10dp"
-                android:textColor="#030060"
-                android:textSize="20sp"
-                android:hint="Bio"
-                android:maxLength="15"
-                android:layout_width="match_parent"
-                android:background="@drawable/edittextbg"
-                android:layout_height="wrap_content"/>
-
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-
-    <Button
-        android:id="@+id/savebutton"
-        android:layout_width="match_parent"
-        android:layout_marginTop="50dp"
-        android:clickable="true"
-        android:foreground="?attr/selectableItemBackground"
-        android:background="@drawable/button"
-        android:text="SAVE"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:fontFamily="@font/commissioner"
-        android:textSize="15sp"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"
-        android:textColor="@color/white"
-        android:layout_height="wrap_content"/>
-    <Button
-        android:id="@+id/logoutbtn"
-        android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
-        android:clickable="true"
-        android:foreground="?attr/selectableItemBackground"
-        android:background="@drawable/button"
-        android:text="Logout"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:fontFamily="@font/commissioner"
-        android:textSize="15sp"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"
-        android:textColor="@color/white"
-        android:layout_height="wrap_content"/>
-
+    </LinearLayout>
+</ScrollView>
 
 </LinearLayout>
