--- a/app/src/main/res/layout/contact_item_design.xml
+++ b/app/src/main/res/layout/contact_item_design.xml
@@ -8,51 +8,83 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/contactcardview"
         app:cardCornerRadius="10dp"
+        app:cardBackgroundColor="#F2F2F2"
         android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardElevation="3dp">
+
         <LinearLayout
             android:layout_margin="15dp"
             android:gravity="center_horizontal"
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/mycontactimage"
-                android:layout_width="150dp"
-                android:src="@drawable/ic_image"
-                android:layout_height="150dp"/>
-            <TextView
-                android:id="@+id/contactname"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
 
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:text="User Name"
-                android:textSize="20sp"
-                android:fontFamily="@font/commissioner"
-                android:textStyle="bold"
-                android:textAlignment="center"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_height="wrap_content">
+
+                <androidx.cardview.widget.CardView
+                    app:cardElevation="2dp"
+                    app:cardCornerRadius="10dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp">
+
+                    <ImageView
+                        android:scaleType="centerCrop"
+                        android:id="@+id/mycontactimage"
+                        android:layout_width="100dp"
+                        android:src="@drawable/ic_image"
+                        android:layout_height="100dp"/>
+
+                </androidx.cardview.widget.CardView>
+
+               <LinearLayout
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:orientation="vertical">
+                   <TextView
+                       android:id="@+id/contactname"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:layout_marginStart="10dp"
+                       android:layout_marginEnd="10dp"
+                       android:text="User Name"
+                       android:textSize="20sp"
+                       android:fontFamily="@font/product_sans_regular" />
+                   <TextView
+                       android:id="@+id/contactbio"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:layout_marginStart="10dp"
+                       android:layout_marginEnd="10dp"
+                       android:text="User Bio"
+                       android:textSize="20sp"
+                       android:fontFamily="@font/product_sans_regular"/>
+               </LinearLayout>
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/callbtn"
                 android:layout_width="match_parent"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:clickable="true"
+                android:drawableLeft="@drawable/ic_call"
                 android:foreground="?attr/selectableItemBackground"
                 android:background="@drawable/button"
                 android:text="Call"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
                 android:fontFamily="@font/commissioner"
                 android:textSize="15sp"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
                 android:textColor="@color/white"
                 android:layout_height="wrap_content"/>
-
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
