--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -9,6 +9,7 @@
     <ImageView
         android:id="@+id/callimage"
         android:layout_width="match_parent"
+        android:scaleType="centerCrop"
         android:layout_height="match_parent"
         android:src="@drawable/ic_image"/>
 
@@ -25,10 +26,12 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/product_sans_regular"
             android:text="User Name"
+            android:textColor="@color/white"
             android:textAlignment="center"
             android:textSize="30dp" />
 
     <TextView
+        android:textColor="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/commissioner"
@@ -44,19 +47,19 @@
 
         <ImageView
             android:id="@+id/callaccept"
-            android:layout_margin="10dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/ic_call"/>
 
-        <RelativeLayout
-            android:layout_margin="30dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
 
         <ImageView
+            android:layout_marginLeft="50dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
             android:id="@+id/calldecline"
-            android:layout_margin="10dp"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/ic_call_silent"/>
