--- a/app/src/main/res/layout/contact_item_design.xml
+++ b/app/src/main/res/layout/contact_item_design.xml
@@ -43,10 +43,12 @@
                 </androidx.cardview.widget.CardView>
 
                <LinearLayout
+                   android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
+                       android:layout_marginBottom="5dp"
                        android:id="@+id/contactname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
@@ -62,7 +64,7 @@
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="User Bio"
-                       android:textSize="20sp"
+                       android:textSize="18sp"
                        android:fontFamily="@font/product_sans_regular"/>
                </LinearLayout>
 
@@ -77,8 +79,6 @@
                 android:foreground="?attr/selectableItemBackground"
                 android:background="@drawable/button"
                 android:text="Call"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
                 android:fontFamily="@font/commissioner"
                 android:textSize="15sp"
                 android:paddingBottom="10dp"
