--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -47,7 +47,8 @@
 
         <ImageView
             android:id="@+id/callaccept"
-            android:layout_marginRight="50dp"
+            android:visibility="gone"
+            android:layout_marginRight="100dp"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="20dp"
             android:layout_width="50dp"
@@ -56,7 +57,6 @@
 
 
         <ImageView
-            android:layout_marginLeft="50dp"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="20dp"
             android:id="@+id/calldecline"
