--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,9 +25,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="25sp"
-                    android:text="Contacts"
+                    android:text="Friends"
                     android:textColor="@color/white"
-                    android:fontFamily="@font/commissioner"/>
+                    android:fontFamily="@font/product_sans_regular"/>
                 <ImageView
                     android:id="@+id/findpeopleimage"
                     android:layout_marginRight="30dp"
